# ainotes

./: .buildinfo  .gitignore  .pylintrc  LICENSE  README.md  README_PACKAGE.md  about_ai.html  genindex.html  index.html  objects.inv  pyproject.toml  requirements.txt  search.html  searchindex.js
.github/workflows/: deploy-book.yaml  deploy.yaml  publish-package.yaml  publish-package.yml  publish.yml
_sources/: index.md
_sources/decision/: confidence.ipynb
_sources/foundations/: calculus.ipynb  cognitive_science.md  computer_science.md  confidence.ipynb  data_manipulation.ipynb  data_preprocessing.ipynb  decision.ipynb  human_brain.md  linear_algebra.ipynb  math.md  neuroscience.md  proba_stats.ipynb  programming.ipynb
_sources/ml/: activation_functions.ipynb  ann.ipynb  challenges.md  classification.ipynb  cnn.ipynb  data.ipynb  data_manipulation.ipynb  deep_learning.md  exercises.md  introduction.ipynb  principles.ipynb  regression.ipynb  rl.ipynb  supervised_learning.md
_sources/ml/challenges/: heart_disease.ipynb
_sources/ml/exercises/: cifar10.ipynb
_sources/reference/: acknowledgments.md
_sources/search/: dijkstra_astar.ipynb
ainotes/decision/: confidence.py  introduction.py
ainotes/foundations/: calculus.py  linear_algebra.py  proba_stats.py  programming.py
ainotes/ml/: ann.py  classification.py  cnn.py  data.py  introduction.py  principles.py  regression.py  rl.py  rnn.py
ainotes/ml/challenges/: cifar10.py  cifar10_solution.py
ainotes/ml/exercises/: cifar10.py  cifar10_solution.py  heart_disease_solution.py
ainotes/search/: dijkstra_astar.py
ainotes/utils/: plot.py  train.py
decision/: confidence.html  introduction.html
docs/: _config.yml  _toc.yml  about_ai.md  index.md  references.bib
docs/decision/: confidence.ipynb  introduction.ipynb
docs/foundations/: calculus.ipynb  cognitive_science.md  computer_science.md  data_manipulation.ipynb  decision.ipynb  human_brain.md  linear_algebra.ipynb  math.md  neuroscience.md  proba_stats.ipynb  programming.ipynb
docs/ml/: ann.ipynb  classification.ipynb  cnn.ipynb  data.ipynb  data_manipulation.ipynb  introduction.ipynb  principles.ipynb  regression.ipynb  reinforcement_learning.md  rl.ipynb  rnn.ipynb  supervised_learning.md
docs/reference/: acknowledgments.md
docs/search/: a_star.ipynb
docs/tools/: python.ipynb
foundations/: calculus.html  cognitive_science.html  computer_science.html  confidence.html  data_manipulation.html  data_preprocessing.html  decision.html  human_brain.html  linear_algebra.html  math.html  neuroscience.html  proba_stats.html  programming.html
foundations/_papermill/: simple_input.html
ml/: activation_functions.html  ann.html  challenges.html  classification.html  cnn.html  data.html  data_manipulation.html  deep_learning.html  exercises.html  introduction.html  principles.html  regression.html  reinforcement_learning.html  rl.html  supervised_learning.html
ml/challenges/: cifar10.html  heart_disease.html
ml/exercises/: cifar10.html  heart_disease.html
reference/: acknowledgments.html  bibliography.html
search/: dijkstra_astar.html
src/decision/: introduction.py
src/foundations/: calculus.py  confidence.py  data_manipulation.py  data_preprocessing.py  decision.py  linear_algebra.py  proba_stats.py  programming.py
src/ml/: ann.py  classification.py  cnn.py  data.py  data_manipulation.py  hands_on_regression.py  introduction.py  principles.py  regression.py  rl.py
src/search/: a_star.py  dijkstra_astar.py
src/tools/: python.py
(+9 files in other folders)
